--- a/templates/dashboard/pages/manageRequests/manageRequests.html
+++ b/templates/dashboard/pages/manageRequests/manageRequests.html
@@ -1,5 +1,3 @@
-{{{{raw-helper}}}}
-{{{{/raw-helper}}}}
 <div class="row">
     <div class="col-lg-12">
             <ol class="breadcrumb" style="margin-top: 10px;">
@@ -7,23 +5,34 @@
                         <div class="dropdown">
                     <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         <i class="fa {{pageIcon}}"></i> 
-                         {{#if extraOptions.data}}
-                         <BtnCaption>{{extraOptions.data.status}}</BtnCaption>  
-                         {{else}}
-                         <BtnCaption>{{pageSubHeading}}</BtnCaption>  
-                         {{/if}}
+                        <BtnCaption>
+                                {{#if extraOptions.data}}
+                                           {{#if extraOptions.data.status}}
+                                               {{extraOptions.data.status}}
+                                           {{else}}
+                                                All
+                                           {{/if}} 
+                                {{else}}
+                                   {{pageSubHeading}}  
+                                {{/if}}
+                               </BtnCaption>
                     </button>
                     <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                            <a class="dropdown-item" href="javascript:statusChanged('All');">All</a>
                         <a class="dropdown-item" href="javascript:statusChanged('Approved');">Approved</a>
                         <a class="dropdown-item" href="javascript:statusChanged('Rejected');">Rejected</a>
                         <a class="dropdown-item" href="javascript:statusChanged('Pending');">Pending</a>                       
                     </div>
                     </div>
+
                 </li>
             </ol>
+        
     </div>
 </div>
+
 <div class='truck-requests'>
+
  <div class='truck-requests-content'>            
 </div>
 </div> 
@@ -126,6 +135,9 @@
             </div>  
         </div>
         {{/if}}
+
+        
+    
          <div class="row">     
             <div class="grid-row-tile col-sm-12">                
                 <div>
@@ -135,6 +147,7 @@
                 </div>                                           
             </div>
          </div>
+
        {{#if comment}}
        <div class="grid-row-title">Comment:</div> 
        <div class="row">     
@@ -147,6 +160,7 @@
           </div>  
       </div>
       {{/if}}
+
         <div class="grid-row-title">Status:</div> 
          <div class="row">     
             <div class="grid-row-tile col-sm-12">                
@@ -157,6 +171,7 @@
                 </div>                                           
             </div>  
         </div>
+
     </div>     
 </div>
 </div>
@@ -174,9 +189,5 @@
 </div>
 </div>
 </script>
-{{{{/raw-helper}}}}
-{{{{raw-helper}}}}
-<script type="text/javascript">
-    console.log("template data",UTILS.getCurrentTemplateData()),$(document).ready(function(){var e=UTILS.getCurrentTemplateData();new GRID_HELPER.GRID(".truck-requests-content",{gridData:e,gridId:"gridTruckRequests",rowConfig:{template:"grid-row-template-details",optionsTemplate:"grid-row-options-template",optionsEvent:"mouseover",optionsPostRender:function(e,t){$(e).find(".approve-trip").click(function(){var e={};e.data=t,MENU_HELPER.menuClick("acceptTripReq","manageTrucks",e)}),$(e).find(".reject-trip").click(function(){MENU_HELPER.menuClick("rejectTripReq","manageTrucks",{extraHref:t._id})})}},sortConfig:{multiple:!1,options:[{title:"Pickup Date",key:"pickup.date",selected:!0,order:"desc"},{title:"Drop Date",key:"drop.date"},{title:"Material Value",key:"pickup.material.approximateCost"}]},filterConfig:{type:"default",order:[],formOptions:{bindings:{"pickup.date_start":"column-1","pickup.date_end":"column-2","drop.date_start":"column-1","drop.date_end":"column-2",status:"column-1"},schemaOverride:{fields:{"pickup.date":{title:"Pickup Date",format:"date",rangeField:!0},"drop.date":{title:"Drop Date",format:"date",rangeField:!0},status:{"default":"Running"}}},optionsOverride:{fields:{"pickup.date_start":{order:1},"pickup.date_end":{order:2},"drop.date_start":{order:3},"drop.date_end":{order:4},status:{order:5}}}}}});statusChanged=function(e){var t={data:{status:e}};MENU_HELPER.menuClick("truckRequests","manageTrucks",t)},Handlebars.registerHelper("getGridOptions",function(e,t){var r=[];API_HELPER.getLoggedInUser();switch(e){case"Pending":r=[{option:"approveTrip",_id:t,id:"approve-trip"},{option:"rejectTrip",_id:t,id:"reject-trip"}];break;case"Approved":r=[];break;case"Rejected":r=[]}return r})});
-</script>
+
 {{{{/raw-helper}}}}
